[package]
authors = ["Andrei Gherghescu <andrei.github.book663@passfwd.com>", "Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Read and parse UBX files"
edition = "2021"
name = "ubx-read"
rust-version = "1.70"
version = "0.0.1"

[dependencies]
ublox = "0.4"
chrono = "0.4.29"
clap = {version = "4.2.7", features = ["cargo"]}
flate2 = { version = "1.0.24", features = ["zlib"] }

[features]
alloc = ["ublox/alloc"]
